--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
   cached_network_image: ^3.2.3
   youtube_player_flutter: ^9.1.1
   video_player: ^2.4.5
+  firebase_core: ^3.8.0
+  firebase_auth: ^5.3.3
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_test:
